--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="display-flex">
             <h3 id="nav-title">Pa<span class="text-primary">l</span>ok</h3>
             <ul id="nav-link" >
-                <li><a class="dark02" href="">About</a></li>
+                <li><a class="dark02" href="#about">About</a></li>
                 <li><a class="dark02" href="">Skill</a></li>
                 <li><a class="dark02" href="">Resumi</a></li>
                 <li><a  href=""><button class="btn">Hire Me</button></a></li>
@@ -35,5 +35,31 @@
             </div>
         </div>
     </header>
+    <main >
+        <section class="about-section" id="about">
+            <div id="about-section-content">
+            <h3 class="section-header">About Me</h3>
+            <p class="section-text-style">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-footer">
+                <div>
+                    <p class="section-text-style">Name:</p>
+                    <p class="section-text-style-2">Palok</p>
+                </div>
+                <div>
+                    <p class="section-text-style">Email:</p>
+                    <p class="section-text-style-2">palokk02@gmail.com</p>
+                </div>
+                <div>
+                    <p class="section-text-style">date of birth:</p>
+                    <p class="section-text-style-2">26 sept 2003</p>
+                </div>
+                <div>
+                    <p class="section-text-style">From:</p>
+                    <p class="section-text-style-2">Singra,natore</p>
+                </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
