added skills secrion

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3 id="nav-title">Pa<span class="text-primary">l</span>ok</h3>
             <ul id="nav-link" >
                 <li><a class="dark02" href="#about">About</a></li>
-                <li><a class="dark02" href="">Skill</a></li>
+                <li><a class="dark02" href="#skill">Skill</a></li>
                 <li><a class="dark02" href="">Resumi</a></li>
                 <li><a  href=""><button class="btn">Hire Me</button></a></li>
             </ul>
@@ -57,6 +57,34 @@
                     <p class="section-text-style">From:</p>
                     <p class="section-text-style-2">Singra,natore</p>
                 </div>
+                </div>
+            </div>
+        </section>
+        <section class="skill-section" id="skill">
+            <div class="skill-section-content">
+            <h3 class="section-text-style-2">What I do</h3>
+            <p class="section-text-style">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="skill-card-container">
+                <div class="skill-card">
+                    <img src="images/icons/js.png" alt="javascript-logo">
+                     <h4 class="section-text-style-2">Vanilla JavaScript</h4>
+                     <p class="section-text-style">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/react.png" alt="javascript-logo">
+                     <h4 class="section-text-style-2">React</h4>
+                     <p class="section-text-style">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/nodejs.png" alt="javascript-logo">
+                     <h4 class="section-text-style-2">Node Js</h4>
+                     <p class="section-text-style">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-card">
+                    <img src="images/icons/mongo.png" alt="javascript-logo">
+                     <h4 class="section-text-style-2">MongoDB</h4>
+                     <p class="section-text-style">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
