footer section added

--- a/index.html
+++ b/index.html
@@ -89,5 +89,23 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <h2>Lets Connect</h2>
+            <p class="section-text-style">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="footer-logo">
+                <img src="images/icons/facebook.png" alt="facebook-logo">
+                <img src="images/icons/insta.png" alt="insta-logo">
+                <img src="images/icons/twitter.png" alt="">
+            </div>
+        </div>
+        <div class="message-me">
+            <h2 >Let’s Message me</h2>
+             <input class="section-text-style" type="text" placeholder="your name"><br><br>
+             <input class="section-text-style" type="email" placeholder="your email"><br><br>
+             <textarea class="section-text-style" name="messge" id="text-message" placeholder="Message me.."></textarea><br><br>
+             <button  class="btn">submit</button>
+        </div>
+    </footer>
 </body>
 </html>
